@@ -28,7 +28,7 @@
         <dependency>
             <groupId>net.sf.jasperreports</groupId>
             <artifactId>jasperreports</artifactId>
-            <version>6.18.0</version> <!-- Ajusta la versión según tu necesidad -->
+            <version>6.21.0</version> <!-- Ajusta la versión según tu necesidad -->
         </dependency>
 
         <!-- Dependencia JDBC para MySQL -->
@@ -70,15 +70,14 @@
 
 
     <build>
-        <finalName>TiendaMaryenis</finalName>
         <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
             <plugins>
                 <plugin>
-                    <artifactId>forms-assembly-plugin</artifactId>
+                    <artifactId>maven-assembly-plugin</artifactId>
                     <configuration>
                         <archive>
                             <manifest>
-                                <mainClass>forms.App</mainClass>
+                                <mainClass>org.marylin.App</mainClass>
                             </manifest>
                         </archive>
                         <descriptorRefs>
@@ -86,6 +85,7 @@
                         </descriptorRefs>
                     </configuration>
                 </plugin>
+
                 <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
                 <plugin>
                     <artifactId>maven-clean-plugin</artifactId>
@@ -140,7 +140,7 @@
                         </execution>
                     </executions>
                     <configuration>
-                        <mainClass>forms.App</mainClass>
+                        <mainClass>org.marylin.App</mainClass>
                     </configuration>
                 </plugin>
             </plugins>
@@ -150,9 +150,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>21</source>
-                    <target>21</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
